log
Thu Apr  7 23:23:34 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: expected expression before ‘=’ token
   while(map->buckets[aux]!==NULL){
                            ^
hashmap.c:45:20: error: ‘HashMap {aka struct HashMap}’ has no member named ‘key’
     if(is_equal(map->key,key)){
                    ^~
hashmap.c:49:18: error: implicit declaration of function ‘cretePeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=cretePeir(kay,value);
                  ^~~~~~~~~
                  createPair
hashmap.c:49:28: error: ‘kay’ undeclared (first use in this function); did you mean ‘key’?
       Pair* dato=cretePeir(kay,value);
                            ^~~
                            key
hashmap.c:49:28: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:50:20: error: ‘i’ undeclared (first use in this function)
       map->buckets[i]=dato;
                    ^
cc1: all warnings being treated as errors
Compilation failed
67fd0cf
Thu Apr  7 23:24:04 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:20: error: ‘HashMap {aka struct HashMap}’ has no member named ‘key’
     if(is_equal(map->key,key)){
                    ^~
hashmap.c:49:18: error: implicit declaration of function ‘craetePeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=craetePeir(key,value);
                  ^~~~~~~~~~
                  createPair
hashmap.c:49:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
b4ab5b8
Thu Apr  7 23:24:46 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:18: error: implicit declaration of function ‘createPeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=createPeir(key,value);
                  ^~~~~~~~~~
                  createPair
hashmap.c:49:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
90ea976
Thu Apr  7 23:25:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
611f5a4
Thu Apr  7 23:29:24 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:61:12: error: ‘map’ redeclared as different kind of symbol
   HashMap *map=createMap(map->capacity*2)
            ^~~
hashmap.c:59:24: note: previous definition of ‘map’ was here
 void enlarge(HashMap * map) {
                        ^~~
hashmap.c:62:3: error: expected ‘,’ or ‘;’ before ‘for’
   for(int i=0 ; i < map->capacity ; i++){
   ^~~
hashmap.c:62:17: error: ‘i’ undeclared (first use in this function)
   for(int i=0 ; i < map->capacity ; i++){
                 ^
hashmap.c:62:17: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:62:40: error: expected ‘;’ before ‘)’ token
   for(int i=0 ; i < map->capacity ; i++){
                                        ^
hashmap.c:62:40: error: expected statement before ‘)’ token
hashmap.c:64:19: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
         insertMap(mapa,map->buckets[i]->key,map->buckets[i]->value);
                   ^~~~
                   map
Compilation failed
d47bf0c
Thu Apr  7 23:29:40 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘enlarge’:
hashmap.c:61:12: error: ‘map’ redeclared as different kind of symbol
   HashMap *map=createMap(map->capacity*2);
            ^~~
hashmap.c:59:24: note: previous definition of ‘map’ was here
 void enlarge(HashMap * map) {
                        ^~~
hashmap.c:64:19: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
         insertMap(mapa,map->buckets[i]->key,map->buckets[i]->value);
                   ^~~~
                   map
hashmap.c:64:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7adf605
